# Baud

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  install.sh  lefthook.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
assets/packaging/: baud.desktop
benches/: bench.rs  pty_hot_path.rs  watchdog_overhead.rs
docs/: README.md
docs/decisions/: ADR-0001-estructura-investigacion.md  ADR-0002-organizacion-documentacion.md  ADR-0003-estructura-codigo.md  ADR-0004-seleccion-crates.md  ADR-0005-event-loop-io.md  ADR-0006-testing-strategy.md  ADR-0007-error-handling.md  ADR-0008-roadmap-mvp.md
docs/specs/: error-handling.md  requisitos.md  roadmap.md  testing-strategy.md
docs/standards/: linux-session-matrix.md
examples/: watchdog_overhead.rs
packaging/linux/: baud.desktop
packaging/windows/wix/: baud.wxs  license.rtf
src/: base64.rs  cli.rs  clipboard.rs  copy_mode.rs  display_quirks.rs  event_loop.rs  grapheme.rs  installation.rs  layout.rs  lib.rs  main.rs  search.rs  search_overlay.rs  selection.rs  session.rs  smart_select.rs  updater.rs  watchdog.rs  window.rs
src/ansi/: mod.rs
src/clipboard/: arboard_backend.rs  caps.rs  cli_fallback.rs  mod.rs  select.rs
src/color/: mod.rs
src/config/: mod.rs  persist.rs  themes.rs  watch.rs
src/config/themes/: ayu-dark.toml  catppuccin-mocha.toml  claude-dark.toml  cobalt2.toml  dracula.toml  everforest-dark.toml  flexoki-dark.toml  github-dark.toml  gruvbox-dark.toml  kanagawa-wave.toml  monokai.toml  nord.toml  one-dark.toml  rose-pine.toml  solarized-dark.toml  tokyo-night.toml
src/cursor/: mod.rs
src/diagnostics/: consent.rs  consent_overlay.rs  hooks.rs  install_id.rs  mod.rs  reporter.rs  sanitize.rs  sentry.rs  transport.rs
src/grid/: damage.rs  mod.rs
src/input/: actions.rs  keymap.rs  mod.rs  wheel.rs
src/layout/: smart_split.rs  spatial.rs
src/pty/: channel.rs  config.rs  contract.rs  mod.rs  unix.rs  windows.rs  wsl.rs
src/renderer/: blink.rs  boxdraw.rs  cell_renderer.rs  contrast.rs  decorations.rs  display_list.rs  geometry.rs  glyph.rs  glyph_cache.rs  limits.rs  metrics.rs  mod.rs  palette.rs  runs.rs  tab_bar.rs  terminal_fallback.rs
src/renderer/builtin/: block_elements.rs  box_drawing.rs  cache.rs  mod.rs  powerline.rs  stroke.rs
src/theme_picker/: mod.rs  overlay.rs  samples.rs  style.rs
tests/: copy_test.rs  e2e_mouse_selection.sh  mouse_report_harness.sh  pty_pipeline_load.sh  pty_pipeline_verify.sh  pty_session_conformance.rs  selected_text_test.rs  visual_regression.rs
tests/visual/: fixtures.sh
tools/: linux_session_smoke.sh
tools/ci/: test_install_release.sh  test_release_assets.sh  verify_release_policy.sh
tools/eval/: watchdog_overhead.sh
tools/packaging/: build_appimage.sh  build_deb.sh  build_rpm.sh  build_tarball.sh  build_windows_msi.ps1  build_windows_portable.ps1  extract_release_notes.sh  sign_update_manifest.sh  verify_release_assets.sh
tools/packaging/update_signer/: Cargo.toml
tools/packaging/update_signer/src/: main.rs
