[package]
name = "baud"
version = "0.0.5"
edition = "2021"
rust-version = "1.87.0"

[dependencies]
nix = { version = "0.31", features = ["term", "fs", "signal", "event"] }
winit = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vte = "0.15"
wgpu = "29"
glyphon = "0.11"
unicode-script = "0.5"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[lints.rust]
unused = "warn"
