[package]
name = "baud"
version = "0.0.5"
edition = "2021"
rust-version = "1.87.0"

[dependencies]
winit = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vte = "0.15"
wgpu = "29"
glyphon = "0.11"
unicode-script = "0.5"
unicode-segmentation = "1.13"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "1"
toml_edit = "0.22"
dirs = "6"
oklab = "1.1.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["term", "fs", "signal", "event", "poll"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "watchdog_overhead"
harness = false

[[bench]]
name = "pty_hot_path"
harness = false

[lints.rust]
unused = "warn"
