[package]
name = "baud"
version = "0.1.0"
edition = "2021"
rust-version = "1.87.0"
description = "A GPU-accelerated terminal emulator with multi-session support, tabs, themes, and clipboard integration"
license = "Apache-2.0"
repository = "https://github.com/KarloZ7715/Baud"
readme = "README.md"
authors = ["KarloZ7715"]
keywords = ["terminal", "emulator", "gpu", "wgpu"]
categories = ["command-line-utilities"]

[dependencies]
winit = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vte = "0.15"
wgpu = "29"
glyphon = "0.11"
unicode-script = "0.5"
unicode-segmentation = "1.13"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "1"
toml_edit = "0.22"
dirs = "6"
oklab = "1.1.2"
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["term", "fs", "signal", "event", "poll"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "watchdog_overhead"
harness = false

[[bench]]
name = "pty_hot_path"
harness = false

[lints.rust]
unused = "warn"

[package.metadata.deb]
maintainer = "KarloZ7715"
copyright = "2026, The Baud Authors"
license-file = ["LICENSE", "4"]
depends = "$auto, libxkbcommon0, libwayland-client0, libx11-6, libxcursor1, libxi6, libxrandr2, libvulkan1, libfontconfig1"
section = "utils"
priority = "optional"
extended-description = """\
A GPU-accelerated terminal emulator with multi-session support, \
tabs, themes, split panes, and clipboard integration.\
"""
assets = [
    ["target/release/baud", "usr/bin/baud", "755"],
    ["assets/packaging/baud.desktop", "usr/share/applications/baud.desktop", "644"],
    ["assets/icons/hicolor/48x48/apps/baud.png", "usr/share/icons/hicolor/48x48/apps/baud.png", "644"],
    ["assets/icons/hicolor/256x256/apps/baud.png", "usr/share/icons/hicolor/256x256/apps/baud.png", "644"],
    ["LICENSE", "usr/share/doc/baud/LICENSE", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/baud", dest = "/usr/bin/baud", mode = "755" },
    { source = "assets/packaging/baud.desktop", dest = "/usr/share/applications/baud.desktop", mode = "644" },
    { source = "assets/icons/hicolor/*/apps/baud.png", dest = "/usr/share/icons/hicolor/", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/baud/LICENSE", mode = "644" },
]

[package.metadata.generate-rpm.requires]
libxkbcommon = "*"
libwayland-client = "*"
libX11 = "*"
libXcursor = "*"
libXi = "*"
libXrandr = "*"
fontconfig = "*"
